# TemGymBasic

./: .gitignore  .readthedocs.yaml  README.md  Readme.md  all_components_example_matplotlib.py  all_components_example_pyqt.py.py  basic_biprism_example_matplotlib.py  basic_example_matplotlib.py  beam_tilt_shift_advanced_example_matplotlib.py  beam_tilt_shift_advanced_example_pyqt.py  beam_tilt_shift_basic_example_matplotlib.py  beam_tilt_shift_basic_example_pyqt.py  biprism_example_pyqt.py  components.py  condenser_aperture_example_matplotlib.py  condenser_aperture_example_pyqt.py  condenser_astigmatism_example_matplotlib.py  condenser_astigmatism_example_pyqt.py  diffraction_holography.py  fourdstem_overfocused.npz  functions.py  geometry.py  gui.py  lens_example_matplotlib.py  lens_example_pyqt.py  lens_example_pyqt.spec  main.py  model.py  model_sem_example_matplotlib.py  model_sem_example_pyqt.py  model_tem_example_matplotlib.py  model_tem_example_pyqt.py  pyproject.toml  requirements-doc.txt  requirements.txt  rotation_centre_matplotlib_example.py  rotation_centre_pyqt.py  run.py  setup.cfg  split_condenser_example_matplotlib.py  (+3 more)
docs/: conf.py  index.rst
live_calibration_examples/: fourdstem_example_no_gui.ipynb  fourdstem_example_no_gui.py  fourdstem_example_no_gui_notebook.ipynb  fourdstem_example_pyqt.py  fourdstem_example_pyqt_large_scale.py
matplotlib_examples/: all_components_example_matplotlib.py  basic_biprism_example_matplotlib.py  basic_example_matplotlib.py  beam_tilt_shift_advanced_example_matplotlib.py  beam_tilt_shift_basic_example_matplotlib.py  condenser_aperture_example_matplotlib.py  condenser_astigmatism_example_matplotlib.py  model_sem_example_matplotlib.py  model_tem_example_matplotlib.py  split_condenser_example_matplotlib.py
pyqtgraph_examples/: 4DStem_example_no_gui.py  all_components_example_pyqt.py  beam_tilt_shift_advanced_example_pyqt.py  beam_tilt_shift_basic_example_pyqt.py  biprism_example_pyqt.py  condenser_aperture_example_pyqt.py  condenser_astigmatism_example_pyqt.py  example_exe.py  example_exe.spec  example_exe_pyqt.spec  lens_example_pyqt.py  splash.ui  (+4 more)
(+19 files in other folders)
