[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temgymbasic"
version = "0.5.5"
authors = [
  { name="David Landers", email="davidlanders2009@hotmail.com" },
]
description = "A educational TEM training package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  'pyqtgraph',
  'pyopengl',
  'numpy',
  'triangle',
  'PyQt5',
  'matplotlib'
]

[project.urls]
"Homepage" = "https://github.com/AMCLab/TemGymBasic"