[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temgymbasic"
version = "0.5.9.1"
authors = [
  { name="David Landers", email="davidlanders2009@hotmail.com" },
]
description = "An educational TEM ray tracing matrix package"
readme = "README.md"
Requires-Python = "3.9.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  'pyqtgraph==0.13.1',
  'pyopengl==3.1.6',
  'numpy==1.23.3',
  'triangle',
  'PyQt5==5.15.2',
  'matplotlib==3.6.1'
]

[project.urls]
"Homepage" = "https://github.com/AMCLab/TemGymBasic"