[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "temgymbasic"
version = "0.6.0.0"
authors = [
  { name="David Landers", email="davidlanders2009@hotmail.com" },
]
description = "An educational TEM ray tracing matrix package"
readme = "README.md"
Requires-Python = "3.9.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  'pyqtgraph',
  'pyopengl',
  'numpy',
  'triangle',
  'PyQt5',
  'matplotlib'
]

[project.urls]
"Homepage" = "https://github.com/AMCLab/TemGymBasic"
